--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
     "bootstrap": "5.3",
     "sass": "^1.83.0",
     "vue": "^3.5.13",
